minor spacing fixes to cancel

--- a/assets/styles/partials/_component.profile-header.scss
+++ b/assets/styles/partials/_component.profile-header.scss
@@ -16,6 +16,9 @@
         margin-left: 143px;
     }
 }
+.profile-section__cancel {
+    margin-top: -15px;
+}
 .profile-section__header {
     width: 100%;
     // border-bottom: 1px solid color(lightgrey);
