--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10987,6 +10987,9 @@ input[type=radio].inline {
     .profile-section__users-left {
       margin-left: 143px; } }
 
+.profile-section__cancel {
+  margin-top: -15px; }
+
 .profile-section__header {
   width: 100%;
   padding-bottom: 10px;
